# course_person_retrieve

./: .gitattributes  .gitignore  README.md  demo_arcface_infer.py  demo_resnet_featrue.py  main.py  pyproject.toml  retrieval_cli.py
docs/: Celeb-reID-light融合检索基准测试.md  Celeb-reID融合检索基准测试.md  IMPLEMENTATION.md  MTCNN检测接口说明.md  bad case分析.md  人脸特征提取流程接口说明.md  向量检索与L2归一化说明.md  实验设计与答辩贡献方案.md  当前向量检索方案与L2归一化说明.md  最简检索接口说明.md  检索流程接口说明.md  统一特征匹配接口说明.md  统一特征提取接口说明.md  融合检索以及Celeb-reID基准测试.md  运行时文件夹结构说明.md  运行结果（webui）.md  需求分析与初步架构设计.md  需求分析与架构设计.md
models/: __init__.py  arcface.py  mtcnn.py
models/mtcnn_project/: README.md  capture_from_video.py  main.py  mtcnn.py  pyproject.toml  requirement.txt
retrieval/: __init__.py  evaluation.py  face_utils.py  feature_extractor.py  image_index.py  io_utils.py  math_utils.py  metrics.py  mtcnn_detector.py  quality.py  types.py  video_annotator.py  video_index.py
scripts/: benchmark_celebreid_light_fusion.py  create_runtime_folders.py
src/: app_retrieval.py  face_feature_pipeline.py  face_index_builder.py  fusion_retrieval.py  person_feature_pipeline.py  retrieval.py
src/app/: app.js  index.html  styles.css
src/tools/: feature_extractor.py  feature_matcher.py  mtcnn_detector.py  retrieval_metrics.py  (+1 more)
test/: test_app_backend_api.py  test_feature_extractor_person_model.py  test_index_naming_rules.py  test_mtcnn_annotate_image.py  test_person_strict_fail.py  test_query_feature_extraction_no_face_check.py  test_yolo_person_detector.py
tests/: test_image_index.py  test_math_utils.py  test_video_index.py
(+5 files in other folders)
