[project]
name = "course_person_retrieve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "gdown>=5.2.0",
    "numpy>=2.2.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchreid==0.2.5",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.41",
    "uvicorn>=0.24.0",
]

[project.scripts]
retrieval-cli = "retrieval_cli:main"

[tool.uv.workspace]
members = [
    "models/mtcnn_project",
]
